# solana-workshop

./: Cargo.toml  README.md
anchor-template/: Anchor.toml  Justfile  biome.json  package.json
anchor-template/programs/anchor-template/: Cargo.toml
anchor-template/programs/anchor-template/src/: lib.rs
anchor-template/programs/anchor-template/tests/: test_initialize.rs
multi-files/: Anchor.toml  package-lock.json
multi-files/programs/multi-files/: Cargo.toml
multi-files/programs/multi-files/src/: lib.rs
multi-files/tests/: multi-files.ts
single-file/: Anchor.toml  package-lock.json  package.json
single-file/programs/single-file/: Cargo.toml
single-file/programs/single-file/src/: lib.rs
single-file/tests/: single-file.ts
solana-spl/: .envrc  Cargo.toml  mint.json
solana-spl/src/: create_spl.rs  mint_spl.rs
solana-wallet/: Cargo.toml
solana-wallet/src/: main.rs
