[package]
name = "anchor-template"
version = "0.1.0"
description = "Anchor template project"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_template"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = "0.31.0"

[dev-dependencies]
mollusk-svm = "0.1.5"
solana-program = "2.2.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
]